[package]
name = "crate-p"
version = "0.1.0"
authors = ["Jack Moffitt <metajack@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-c = { path = "../crate-c" }

[dev-dependencies]
crate-c = { path = "../crate-c", features = ["testing"] }
